--- a/publications.bib
+++ b/publications.bib
@@ -124,3 +124,9 @@ Efficient musculoskeletal simulators and powerful learning algorithms provide co
       archivePrefix={arXiv},
       primaryClass={cs.LG}
 }
+
+@article{caggiano2024myochallenge,
+  title={Myochallenge 2023: Towards human-level dexterity and agility},
+  author={Caggiano, Vittorio and Durandau, Guillaume and Wang, Huiyi and Tan, Chun Kwang and Schumacher, Pierre and Wang, Huawei and Chiappa, Alberto Silvio and Vargas, Alessandro Marin and Mathis, Alexander and Won, Jungdam and others},
+  year={2024}
+}
